--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8UaO8zvh5DjMIZ3C-jUQyIdtnCH9VUBvPRCZIbf60YQ&s" alt=".." role="img">
+	<h1 role="heading" >hey there</h1>
+	<ul role="list">
+		<li role="listitem">hi </li>
+	</ul>
+	<nav role="navigation">
+		<li role="listitem">hi</li>
+	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
